<resources>
    <string name="app_name">Estudo de Interface</string>
    <string name="button_call"> Ligar </string>
    <string name="text_numero"> Escreva um número de telefone </string>
    <string name="txt_eletric"> Carro Elétrico </string>
    <string name="txt_model"> Modelos </string>
    <string name="txt_favorits"> Favoritos </string>
    <string name="txt_price"> Preço </string>
    <string name="txt_battery"> Bateria </string>
    <string name="txt_power"> Potência </string>
    <string name="txt_charge"> Recarga </string>
    <string name="edt_phone"> Seu número de telefone </string>
    <string name="edt_khwPrice"> Preço em kWh </string>
    <string name="edt_kmPercorrido"> KM Percorrido </string>
    <string name="btn_calcular"> Calcular </string>
    <string name="rb_Burger"> Hamburguer </string>
    <string name="cb_compromisso1"> Compromisso 1 </string>
    <string name="cb_compromisso2"> Compromisso 2 </string>
    <string name="fechar">Fechar</string>
    <string name="text_noConnection">Ah! parece que estamos desconectados D:</string>
    <string-array name="spnCidades">
        <item> São Carlos </item>
        <item> Dourados </item>
        <item> Araraquara </item>
    </string-array>
    <string name="responseError">Ops! parece que estamos com problemas para nos conectarmos a você</string>
    <string name="saved_calc">saved_calc</string>
    <string name="unfavorited">Clique para favoritar o item</string>
    <string name="favorited">Clique para desfavoritar o item</string>
    <string name="model_y">Carro Model Y</string>

</resources>