<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvCarro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="24dp"
        android:elevation="24dp"
        android:layout_marginTop="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCardCarro1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/model_y"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:src="@drawable/model_y_removebg"
                android:contentDescription="@string/model_y"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgFavorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toRightOf="@+id/model_y"
                app:layout_constraintTop_toTopOf="@+id/model_y"
                android:src="@drawable/baseline_favorite_border_48"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/unfavorited" />


            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_price"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/model_y"
                app:layout_constraintLeft_toLeftOf="@+id/model_y"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:id="@+id/txtNumberPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 499.000,00"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@id/txtPrice"
                app:layout_constraintTop_toTopOf="@+id/txtPrice"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:id="@+id/txtBattery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_battery"
                app:layout_constraintTop_toBottomOf="@+id/txtPrice"
                app:layout_constraintStart_toStartOf="@id/txtPrice"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/txtNumberBattery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/txtBattery"
                android:text="82,0kWh"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@+id/txtBattery"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:id="@+id/txtPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtBattery"
                app:layout_constraintStart_toStartOf="@id/txtBattery"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/txt_power"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/txtNumberPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/black"
                android:text="351cv"
                app:layout_constraintTop_toTopOf="@+id/txtPower"
                app:layout_constraintLeft_toRightOf="@+id/txtPower"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:id="@+id/txtCharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/txtPower"
                app:layout_constraintStart_toStartOf="@id/txtPower"
                android:text="@string/txt_charge"
                android:paddingBottom="7dp"
                />

            <TextView
                android:id="@+id/txtNumberCharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@id/txtCharge"
                app:layout_constraintTop_toTopOf="@id/txtCharge"
                android:text="40 min (Supercharger)"
                android:layout_marginLeft="20dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>