<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_close_24"
        style="@style/Widget.Material3.ActionMode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        />

    <TextView
        android:id="@+id/txtCalcularAutonomia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:text="Calcular Autonomia"
        app:layout_constraintTop_toBottomOf="@id/imgClose"
        app:layout_constraintStart_toStartOf="@id/imgClose"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        />

    <EditText
        android:id="@+id/edtKHWPrice"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:hint="@string/edt_khwPrice"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@+id/txtCalcularAutonomia"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edtKMPercorrido"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/edtKHWPrice"
        android:layout_marginTop="5dp"
        android:hint="@string/edt_kmPercorrido"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/edtKHWPrice"
        app:layout_constraintEnd_toEndOf="@+id/edtKHWPrice"
        />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintTop_toBottomOf="@id/edtKMPercorrido"
        app:layout_constraintStart_toStartOf="@+id/edtKMPercorrido"
        android:layout_marginTop="5dp"
        />
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/btn_calcular"
        style="@style/Widget.Material3.Button.TonalButton"
        app:layout_constraintTop_toBottomOf="@+id/txtResult"
        app:layout_constraintStart_toStartOf="@+id/edtKMPercorrido"
        app:layout_constraintEnd_toEndOf="@+id/edtKMPercorrido"
        />

</androidx.constraintlayout.widget.ConstraintLayout>